# rasopt

./: .gitignore  README.md  requirements.txt  setup.cfg
analysis/: dynamic_cdfs.m  fit_evolution.py  inundation_plotting.m  inundation_prediction_performance.ipynb  inundation_statistics.ipynb  iteration_performance.ipynb  mean_inundation_stats.py  model_binary_comparison.ipynb  model_comparison.py  model_marginals.ipynb  plot_botorch_model.ipynb  sensitivity_sensor_locating.ipynb
analysis/Data/: sample_botorch_model.json
examples/: HECRAS_Geometry_Instructions.docx  README.md  calibration_example.ipynb  config_1D2D.yml  config_optimize_secchia.yml  dynamic_cdfs.m  fit_evolution.py  inundation_cdfs.ipynb  inundation_cdfs.m  inundation_statistics.ipynb  inundation_statistics.m  iteration_performance.ipynb  model_binary_comparison.ipynb  model_marginals.ipynb  plot_botorch_model.ipynb  sensitivity_sensor_locating.ipynb  sensor_locations.csv
examples/Output_Files/: BT_exp_veg1_veg2.json
src/Utils/: alter_files.py  land_cover_utils.py  plotting.py  utils.py
src/rasopt/: hecras_model.py
src/rasopt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/rasopt/Optimize/: config_1D2D.yml  hecras_model.py  optimize1D2D.py  optimize_n_and_breach.py  run_1D2D_optimize.py  sensor_locations.csv
src/rasopt/Plotting/: floodplain_mask.ipynb  model_binary_comparison.ipynb  plot_botorch_model.ipynb  plotting.py
src/rasopt/Plotting/.ipynb_checkpoints/: model_binary_comparison-checkpoint.ipynb  (+2 more)
src/rasopt/Utilities/: alter_files.py  flood_hotspots.py  land_cover_utils.py  musings.py  utils.py
