[metadata]
name = rasopt-alex-l-young
version = 0.0.1
author = Alex Young
description = Optimization for HEC-RAS Flood Model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alex-l-young/rasopt
project_urls =
    Bug Tracker = https://github.com/alex-l-young/rasopt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    h5py
    numpy
    pandas==1.2.4
    matplotlib
    scikit-learn
    scikit-optimize
    scipy
    botorch
    ax-platform==0.2.3
    geojson
    pytest
    pywin32
    notebook
    seaborn

[options.packages.find]
where = src